Function to download top movie data
Wrote function to download top movie data from boxoffice mojo.com

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -38,7 +38,7 @@
       "%matplotlib inline\n",
       "\n",
       "import json\n",
-      "\n",
+      "from pattern import web\n",
       "import requests\n",
       "import pandas as pd\n",
       "import numpy as np\n",
@@ -99,7 +99,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -138,7 +138,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "IndentationError",
+       "evalue": "expected an indented block (<ipython-input-4-2d369065740e>, line 12)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-2d369065740e>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    def get_oscars():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -157,6 +167,152 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h2> Getting the Movies </h2>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def get_top_movies_by_year(yr,num_movies=200):\n",
+      "    num_pages = (num_movies%100) + 1\n",
+      "    alldata = []\n",
+      "    for pagenum in range(1,num_pages+1):\n",
+      "        url = 'http://boxofficemojo.com/yearly/chart/?page=' + str(pagenum) + '&view=releasedate&view2=domestic&yr=' + str(yr) + '&p=.htm'\n",
+      "        page_xml = requests.get(url).text\n",
+      "        dom = web.Element(page_xml)\n",
+      "        for table in dom.by_tag('table'):\n",
+      "            cellpadding = (table.attributes['cellpadding'])    \n",
+      "            if (cellpadding == '5'):  # isolates table with movie data\n",
+      "                for row in table.by_tag('tr'):\n",
+      "                    cols = row.by_tag('td')\n",
+      "                    #catches movie rows\n",
+      "                    try:\n",
+      "                        rank = int(web.strip_tags(cols[0]))\n",
+      "                        if (rank<=num_movies):\n",
+      "                            movie_title = web.strip_tags(cols[1]).strip('\\t')\n",
+      "                            studio = web.strip_tags(cols[2]).strip('\\t')\n",
+      "                            total_gross = int(((web.strip_tags(cols[3])).strip('$')).replace(',', ''))\n",
+      "                            num_theaters_total = int((web.strip_tags(cols[4])).replace(',', ''))\n",
+      "                            opening_revenue = int(((web.strip_tags(cols[5])).strip('$')).replace(',', ''))\n",
+      "                            num_theaters_opening = int((web.strip_tags(cols[6])).replace(',', ''))\n",
+      "                            date_open = web.strip_tags(cols[7]).strip('\\t')\n",
+      "                            date_close = web.strip_tags(cols[8]).strip('\\t')\n",
+      "                            data_row = [rank,movie_title,studio,total_gross,num_theaters_total,opening_revenue,num_theaters_opening,date_open,date_close]\n",
+      "                            alldata.append(data_row)\n",
+      "                    except ValueError:\n",
+      "                        pass\n",
+      "    result = pd.DataFrame(alldata,columns=['rank','movie_title','studio','total_gross','num_theaters_total','opening_revenue','num_theaters_opening','date_open','date_close'])\n",
+      "    return result\n",
+      "\n",
+      "movies_in_2012=get_top_movies_by_year(2012,num_movies=10)\n",
+      "movies_in_2012.head()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>rank</th>\n",
+        "      <th>movie_title</th>\n",
+        "      <th>studio</th>\n",
+        "      <th>total_gross</th>\n",
+        "      <th>num_theaters_total</th>\n",
+        "      <th>opening_revenue</th>\n",
+        "      <th>num_theaters_opening</th>\n",
+        "      <th>date_open</th>\n",
+        "      <th>date_close</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> 1</td>\n",
+        "      <td>             Marvel's The Avengers</td>\n",
+        "      <td>   BV</td>\n",
+        "      <td> 623357910</td>\n",
+        "      <td> 4349</td>\n",
+        "      <td> 207438708</td>\n",
+        "      <td> 4349</td>\n",
+        "      <td>   5/4</td>\n",
+        "      <td>  10/4</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> 2</td>\n",
+        "      <td>             The Dark Knight Rises</td>\n",
+        "      <td>   WB</td>\n",
+        "      <td> 448139099</td>\n",
+        "      <td> 4404</td>\n",
+        "      <td> 160887295</td>\n",
+        "      <td> 4404</td>\n",
+        "      <td>  7/20</td>\n",
+        "      <td> 12/13</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> 3</td>\n",
+        "      <td>                  The Hunger Games</td>\n",
+        "      <td>  LGF</td>\n",
+        "      <td> 408010692</td>\n",
+        "      <td> 4137</td>\n",
+        "      <td> 152535747</td>\n",
+        "      <td> 4137</td>\n",
+        "      <td>  3/23</td>\n",
+        "      <td>   9/6</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> 4</td>\n",
+        "      <td>                           Skyfall</td>\n",
+        "      <td> Sony</td>\n",
+        "      <td> 304360277</td>\n",
+        "      <td> 3526</td>\n",
+        "      <td>  88364714</td>\n",
+        "      <td> 3505</td>\n",
+        "      <td>  11/9</td>\n",
+        "      <td>  3/10</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> 5</td>\n",
+        "      <td> The Hobbit: An Unexpected Journey</td>\n",
+        "      <td>   WB</td>\n",
+        "      <td> 303003568</td>\n",
+        "      <td> 4100</td>\n",
+        "      <td>  84617303</td>\n",
+        "      <td> 4045</td>\n",
+        "      <td> 12/14</td>\n",
+        "      <td>  4/25</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 49,
+       "text": [
+        "   rank                        movie_title studio  total_gross  num_theaters_total  opening_revenue  num_theaters_opening date_open date_close\n",
+        "0     1              Marvel's The Avengers     BV    623357910                4349        207438708                  4349       5/4       10/4\n",
+        "1     2              The Dark Knight Rises     WB    448139099                4404        160887295                  4404      7/20      12/13\n",
+        "2     3                   The Hunger Games    LGF    408010692                4137        152535747                  4137      3/23        9/6\n",
+        "3     4                            Skyfall   Sony    304360277                3526         88364714                  3505      11/9       3/10\n",
+        "4     5  The Hobbit: An Unexpected Journey     WB    303003568                4100         84617303                  4045     12/14       4/25"
+       ]
+      }
+     ],
+     "prompt_number": 49
     },
     {
      "cell_type": "markdown",
