--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -99,7 +99,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -141,14 +141,14 @@
      "outputs": [
       {
        "ename": "IndentationError",
-       "evalue": "expected an indented block (<ipython-input-4-2d369065740e>, line 12)",
+       "evalue": "expected an indented block (<ipython-input-2-2d369065740e>, line 12)",
        "output_type": "pyerr",
        "traceback": [
-        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-2d369065740e>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    def get_oscars():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-2d369065740e>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    def get_oscars():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -166,7 +166,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'get_oscars' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-3-1214e73593fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moscar_results\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_oscars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"oscars.json\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"w+\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moscar_results\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mNameError\u001b[0m: name 'get_oscars' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -179,8 +191,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "api_key = 'sdat77wpkdnuyvb9bqhz2y5v' #nicks api key\n",
+      "\n",
       "def get_top_movies_by_year(yr,num_movies=200):\n",
       "    num_pages = (num_movies%100) + 1\n",
+      "    missing_rtid = 0\n",
+      "    missing_imdbid = 0\n",
       "    alldata = []\n",
       "    for pagenum in range(1,num_pages+1):\n",
       "        url = 'http://boxofficemojo.com/yearly/chart/?page=' + str(pagenum) + '&view=releasedate&view2=domestic&yr=' + str(yr) + '&p=.htm'\n",
@@ -203,11 +219,41 @@
       "                            num_theaters_opening = int((web.strip_tags(cols[6])).replace(',', ''))\n",
       "                            date_open = web.strip_tags(cols[7]).strip('\\t')\n",
       "                            date_close = web.strip_tags(cols[8]).strip('\\t')\n",
-      "                            data_row = [rank,movie_title,studio,total_gross,num_theaters_total,opening_revenue,num_theaters_opening,date_open,date_close]\n",
+      "                            \n",
+      "                            #using rotten tomatoes to get rtid/imdbid\n",
+      "                            url2 = 'http://api.rottentomatoes.com/api/public/v1.0/movies.json?' 'q=' + movie_title + ' &page_limit=10' + '&apikey=' + api_key\n",
+      "                            info_data = requests.get(url2).text\n",
+      "                            info_json = json.loads(info_data)\n",
+      "                            movie_count = 0\n",
+      "                            rtid=''\n",
+      "                            imdbid=''\n",
+      "                            for movie in info_json['movies']:\n",
+      "                                if movie['year']==yr:\n",
+      "                                    movie_count+=1\n",
+      "                                    rtid=movie['id']\n",
+      "                                    try:\n",
+      "                                        imdbid=(movie['alternate_ids'])['imdb']\n",
+      "                                    except:\n",
+      "                                        imdbid=''\n",
+      "                            if movie_count!=1: #case where more than one movie met description\n",
+      "                                rtid = ''\n",
+      "                                imdbid = ''\n",
+      "                            if imdbid=='':\n",
+      "                                missing_imdbid += 1\n",
+      "                            if rtid=='':\n",
+      "                                missing_rtid += 1\n",
+      "                            \n",
+      "                            data_row = [imdbid,rtid,rank,movie_title,studio,total_gross,num_theaters_total,opening_revenue,num_theaters_opening,date_open,date_close]\n",
       "                            alldata.append(data_row)\n",
       "                    except ValueError:\n",
       "                        pass\n",
-      "    result = pd.DataFrame(alldata,columns=['rank','movie_title','studio','total_gross','num_theaters_total','opening_revenue','num_theaters_opening','date_open','date_close'])\n",
+      "    result = pd.DataFrame(alldata,columns=['imdbid','rtid','rank','movie_title','studio','total_gross','num_theaters_total','opening_revenue','num_theaters_opening','date_open','date_close'])\n",
+      "    \n",
+      "    if (missing_imdbid>0):\n",
+      "        print 'unable to find a imdbid for ' + str(missing_imdbid) + ' movies of ' + str(num_movies) + ' in ' + str(yr)\n",
+      "    if (missing_rtid>0):\n",
+      "        print 'unable to find a rtid for ' + str(missing_rtid) + ' movies of ' + str(num_movies) + ' in ' + str(yr)\n",
+      "    \n",
       "    return result\n",
       "\n",
       "movies_in_2012=get_top_movies_by_year(2012,num_movies=10)\n",
@@ -217,12 +263,22 @@
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "unable to find a imdbid for 0 movies of 10 in 2012\n",
+        "unable to find a rtid for 0 movies of 10 in 2012\n"
+       ]
+      },
+      {
        "html": [
         "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
         "<table border=\"1\" class=\"dataframe\">\n",
         "  <thead>\n",
         "    <tr style=\"text-align: right;\">\n",
         "      <th></th>\n",
+        "      <th>imdbid</th>\n",
+        "      <th>rtid</th>\n",
         "      <th>rank</th>\n",
         "      <th>movie_title</th>\n",
         "      <th>studio</th>\n",
@@ -237,6 +293,8 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>0</th>\n",
+        "      <td> 0848228</td>\n",
+        "      <td> 770740154</td>\n",
         "      <td> 1</td>\n",
         "      <td>             Marvel's The Avengers</td>\n",
         "      <td>   BV</td>\n",
@@ -249,6 +307,8 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
+        "      <td> 1345836</td>\n",
+        "      <td> 771041731</td>\n",
         "      <td> 2</td>\n",
         "      <td>             The Dark Knight Rises</td>\n",
         "      <td>   WB</td>\n",
@@ -261,6 +321,8 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
+        "      <td> 1392170</td>\n",
+        "      <td> 771190618</td>\n",
         "      <td> 3</td>\n",
         "      <td>                  The Hunger Games</td>\n",
         "      <td>  LGF</td>\n",
@@ -273,6 +335,8 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
+        "      <td> 1074638</td>\n",
+        "      <td> 770680844</td>\n",
         "      <td> 4</td>\n",
         "      <td>                           Skyfall</td>\n",
         "      <td> Sony</td>\n",
@@ -285,6 +349,8 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
+        "      <td> 0903624</td>\n",
+        "      <td> 770675766</td>\n",
         "      <td> 5</td>\n",
         "      <td> The Hobbit: An Unexpected Journey</td>\n",
         "      <td>   WB</td>\n",
@@ -301,18 +367,18 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 49,
+       "prompt_number": 15,
        "text": [
-        "   rank                        movie_title studio  total_gross  num_theaters_total  opening_revenue  num_theaters_opening date_open date_close\n",
-        "0     1              Marvel's The Avengers     BV    623357910                4349        207438708                  4349       5/4       10/4\n",
-        "1     2              The Dark Knight Rises     WB    448139099                4404        160887295                  4404      7/20      12/13\n",
-        "2     3                   The Hunger Games    LGF    408010692                4137        152535747                  4137      3/23        9/6\n",
-        "3     4                            Skyfall   Sony    304360277                3526         88364714                  3505      11/9       3/10\n",
-        "4     5  The Hobbit: An Unexpected Journey     WB    303003568                4100         84617303                  4045     12/14       4/25"
+        "    imdbid       rtid  rank                        movie_title studio  total_gross  num_theaters_total  opening_revenue  num_theaters_opening date_open date_close\n",
+        "0  0848228  770740154     1              Marvel's The Avengers     BV    623357910                4349        207438708                  4349       5/4       10/4\n",
+        "1  1345836  771041731     2              The Dark Knight Rises     WB    448139099                4404        160887295                  4404      7/20      12/13\n",
+        "2  1392170  771190618     3                   The Hunger Games    LGF    408010692                4137        152535747                  4137      3/23        9/6\n",
+        "3  1074638  770680844     4                            Skyfall   Sony    304360277                3526         88364714                  3505      11/9       3/10\n",
+        "4  0903624  770675766     5  The Hobbit: An Unexpected Journey     WB    303003568                4100         84617303                  4045     12/14       4/25"
        ]
       }
      ],
-     "prompt_number": 49
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
