--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -38,6 +38,7 @@
       "%matplotlib inline\n",
       "\n",
       "import json\n",
+      "import unicodedata\n",
       "from pattern import web\n",
       "import requests\n",
       "import pandas as pd\n",
@@ -49,6 +50,8 @@
       "\n",
       "# set some nicer defaults for matplotlib\n",
       "from matplotlib import rcParams\n",
+      "\n",
+      "api_key = 'sdat77wpkdnuyvb9bqhz2y5v' #nicks api key for rotten tomatoes\n",
       "\n",
       "#these colors come from colorbrewer2.org. Each is an RGB triplet\n",
       "dark2_colors = [(0.10588235294117647, 0.6196078431372549, 0.4666666666666667),\n",
@@ -99,7 +102,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -191,10 +194,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "api_key = 'sdat77wpkdnuyvb9bqhz2y5v' #nicks api key\n",
-      "\n",
       "def get_top_movies_by_year(yr,num_movies=200):\n",
-      "    num_pages = (num_movies%100) + 1\n",
+      "    num_pages = int((num_movies-1)/100) + 1\n",
       "    missing_rtid = 0\n",
       "    missing_imdbid = 0\n",
       "    alldata = []\n",
@@ -210,8 +211,9 @@
       "                    #catches movie rows\n",
       "                    try:\n",
       "                        rank = int(web.strip_tags(cols[0]))\n",
-      "                        if (rank<=num_movies):\n",
+      "                        if (rank<=num_movies): #checks to make sure in right spot!\n",
       "                            movie_title = web.strip_tags(cols[1]).strip('\\t')\n",
+      "                            movie_title = unicodedata.normalize('NFKD', movie_title).encode('ascii', 'ignore') #removes accents\n",
       "                            studio = web.strip_tags(cols[2]).strip('\\t')\n",
       "                            total_gross = int(((web.strip_tags(cols[3])).strip('$')).replace(',', ''))\n",
       "                            num_theaters_total = int((web.strip_tags(cols[4])).replace(',', ''))\n",
@@ -227,14 +229,17 @@
       "                            movie_count = 0\n",
       "                            rtid=''\n",
       "                            imdbid=''\n",
-      "                            for movie in info_json['movies']:\n",
-      "                                if movie['year']==yr:\n",
-      "                                    movie_count+=1\n",
-      "                                    rtid=movie['id']\n",
-      "                                    try:\n",
-      "                                        imdbid=(movie['alternate_ids'])['imdb']\n",
-      "                                    except:\n",
-      "                                        imdbid=''\n",
+      "                            try:\n",
+      "                                for movie in info_json['movies']:\n",
+      "                                    if movie['year']==yr:\n",
+      "                                        movie_count+=1\n",
+      "                                        rtid=movie['id']\n",
+      "                                        try:\n",
+      "                                            imdbid=(movie['alternate_ids'])['imdb']\n",
+      "                                        except:\n",
+      "                                            imdbid=''\n",
+      "                            except:\n",
+      "                                pass\n",
       "                            if movie_count!=1: #case where more than one movie met description\n",
       "                                rtid = ''\n",
       "                                imdbid = ''\n",
@@ -243,21 +248,39 @@
       "                            if rtid=='':\n",
       "                                missing_rtid += 1\n",
       "                            \n",
-      "                            data_row = [imdbid,rtid,rank,movie_title,studio,total_gross,num_theaters_total,opening_revenue,num_theaters_opening,date_open,date_close]\n",
+      "                            data_row = [rank,movie_title,imdbid,rtid,studio,total_gross,num_theaters_total,opening_revenue,num_theaters_opening,date_open,date_close]\n",
       "                            alldata.append(data_row)\n",
       "                    except ValueError:\n",
       "                        pass\n",
-      "    result = pd.DataFrame(alldata,columns=['imdbid','rtid','rank','movie_title','studio','total_gross','num_theaters_total','opening_revenue','num_theaters_opening','date_open','date_close'])\n",
-      "    \n",
+      "    result = pd.DataFrame(alldata,columns=['rank','movie_title','imdbid','rtid','studio','total_gross','num_theaters_total','opening_revenue','num_theaters_opening','date_open','date_close'])\n",
       "    if (missing_imdbid>0):\n",
       "        print 'unable to find a imdbid for ' + str(missing_imdbid) + ' movies of ' + str(num_movies) + ' in ' + str(yr)\n",
       "    if (missing_rtid>0):\n",
       "        print 'unable to find a rtid for ' + str(missing_rtid) + ' movies of ' + str(num_movies) + ' in ' + str(yr)\n",
-      "    \n",
-      "    return result\n",
-      "\n",
-      "movies_in_2012=get_top_movies_by_year(2012,num_movies=10)\n",
-      "movies_in_2012.head()"
+      "    return result"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>Saving data for years of interest:</b>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for yr in range(2003,2013):\n",
+      "    num_movies=200\n",
+      "    result=get_top_movies_by_year(yr,num_movies)\n",
+      "    narrowed_data=pd.DataFrame(result, columns=['rank','movie_title','imdbid','rtid'])\n",
+      "    filename=str(yr) + '_top' + str(num_movies) + '.csv'\n",
+      "    narrowed_data.to_csv(filename, index=False)"
      ],
      "language": "python",
      "metadata": {},
@@ -266,119 +289,30 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "unable to find a imdbid for 0 movies of 10 in 2012\n",
-        "unable to find a rtid for 0 movies of 10 in 2012\n"
-       ]
-      },
-      {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>imdbid</th>\n",
-        "      <th>rtid</th>\n",
-        "      <th>rank</th>\n",
-        "      <th>movie_title</th>\n",
-        "      <th>studio</th>\n",
-        "      <th>total_gross</th>\n",
-        "      <th>num_theaters_total</th>\n",
-        "      <th>opening_revenue</th>\n",
-        "      <th>num_theaters_opening</th>\n",
-        "      <th>date_open</th>\n",
-        "      <th>date_close</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td> 0848228</td>\n",
-        "      <td> 770740154</td>\n",
-        "      <td> 1</td>\n",
-        "      <td>             Marvel's The Avengers</td>\n",
-        "      <td>   BV</td>\n",
-        "      <td> 623357910</td>\n",
-        "      <td> 4349</td>\n",
-        "      <td> 207438708</td>\n",
-        "      <td> 4349</td>\n",
-        "      <td>   5/4</td>\n",
-        "      <td>  10/4</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>1</th>\n",
-        "      <td> 1345836</td>\n",
-        "      <td> 771041731</td>\n",
-        "      <td> 2</td>\n",
-        "      <td>             The Dark Knight Rises</td>\n",
-        "      <td>   WB</td>\n",
-        "      <td> 448139099</td>\n",
-        "      <td> 4404</td>\n",
-        "      <td> 160887295</td>\n",
-        "      <td> 4404</td>\n",
-        "      <td>  7/20</td>\n",
-        "      <td> 12/13</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>2</th>\n",
-        "      <td> 1392170</td>\n",
-        "      <td> 771190618</td>\n",
-        "      <td> 3</td>\n",
-        "      <td>                  The Hunger Games</td>\n",
-        "      <td>  LGF</td>\n",
-        "      <td> 408010692</td>\n",
-        "      <td> 4137</td>\n",
-        "      <td> 152535747</td>\n",
-        "      <td> 4137</td>\n",
-        "      <td>  3/23</td>\n",
-        "      <td>   9/6</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3</th>\n",
-        "      <td> 1074638</td>\n",
-        "      <td> 770680844</td>\n",
-        "      <td> 4</td>\n",
-        "      <td>                           Skyfall</td>\n",
-        "      <td> Sony</td>\n",
-        "      <td> 304360277</td>\n",
-        "      <td> 3526</td>\n",
-        "      <td>  88364714</td>\n",
-        "      <td> 3505</td>\n",
-        "      <td>  11/9</td>\n",
-        "      <td>  3/10</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td> 0903624</td>\n",
-        "      <td> 770675766</td>\n",
-        "      <td> 5</td>\n",
-        "      <td> The Hobbit: An Unexpected Journey</td>\n",
-        "      <td>   WB</td>\n",
-        "      <td> 303003568</td>\n",
-        "      <td> 4100</td>\n",
-        "      <td>  84617303</td>\n",
-        "      <td> 4045</td>\n",
-        "      <td> 12/14</td>\n",
-        "      <td>  4/25</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 15,
-       "text": [
-        "    imdbid       rtid  rank                        movie_title studio  total_gross  num_theaters_total  opening_revenue  num_theaters_opening date_open date_close\n",
-        "0  0848228  770740154     1              Marvel's The Avengers     BV    623357910                4349        207438708                  4349       5/4       10/4\n",
-        "1  1345836  771041731     2              The Dark Knight Rises     WB    448139099                4404        160887295                  4404      7/20      12/13\n",
-        "2  1392170  771190618     3                   The Hunger Games    LGF    408010692                4137        152535747                  4137      3/23        9/6\n",
-        "3  1074638  770680844     4                            Skyfall   Sony    304360277                3526         88364714                  3505      11/9       3/10\n",
-        "4  0903624  770675766     5  The Hobbit: An Unexpected Journey     WB    303003568                4100         84617303                  4045     12/14       4/25"
+        "unable to find a imdbid for 47 movies of 200 in 2010\n",
+        "unable to find a rtid for 45 movies of 200 in 2010\n"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>Reading in saved data:</b>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#result = pd.read_csv(filename)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
