updated the notebook and added code from nominees.py

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -102,7 +102,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -126,41 +126,259 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\"\"\"\n",
-      "Scraping code to construct dictionary from IMDB\n",
+      "\n",
+      "\"HELPER FUNCTIONS\"\n",
+      "\n",
+      "#import csv\n",
+      "\n",
+      "from pattern.web import URL, DOM, plaintext, strip_between\n",
+      "from pattern.web import NODE, TEXT, COMMENT, ELEMENT, DOCUMENT\n",
+      "\n",
+      "import re\n",
+      "\n",
+      "#get rid of accents etc. \n",
+      "def fixWeirdChars(phrase):\n",
+      "\tmatchObj = re.search(r'&#x..', phrase)\n",
+      "\tif matchObj:\n",
+      "   \t\taccentedHex = matchObj.group()\n",
+      "   \t\tHexPart = accentedHex.split('x')[1]\n",
+      "   \t\tif(HexPart == 'E9'):\n",
+      "   \t\t\tphrase = re.sub((accentedHex+';'), 'e', phrase)\n",
+      "   \t\telse:\n",
+      "\t   \t\tHexy = \"0x\" + HexPart\n",
+      "\t   \t\tNum = int(Hexy, 16)\n",
+      "\t   \t\tChar = chr(Num)\n",
+      "\t   \t\tphrase = re.sub((accentedHex+';'), Char, phrase)\n",
+      "\n",
+      "   \t\tmatchAgain = re.search(r'&#x..', phrase)\n",
+      "   \t\tif(matchAgain):\n",
+      "   \t\t\treturn fixWeirdChars(phrase)\n",
+      "   \t\telse:\n",
+      "   \t\t\treturn phrase\n",
+      "   \telse:\n",
+      "   \t\treturn phrase\n",
+      "\n",
+      "\n",
+      "def clean_unicode(s):\n",
+      "\ts = str(s)\n",
+      "\ts.encode('ascii','ignore')\n",
+      "\ts = fixWeirdChars(s)\n",
+      " \treturn str(s)\n",
+      "\n",
+      "'''\n",
+      "repair dictionary names\n",
+      "'''\n",
+      "#a little hard coding, unfortunately \n",
+      "def repair_dict(dictionary):\n",
+      "\tfor year in dictionary:\n",
+      "\t\tfor award in dictionary[year]:\n",
+      "\t\t\tif(award == 'Best Motion Picture of the Year'):\n",
+      "\t\t\t\tdictionary[year]['Best Picture'] = dictionary[year]['Best Motion Picture of the Year']\n",
+      "\t\t\t\tdel dictionary[year]['Best Motion Picture of the Year']\n",
+      "\n",
+      "\t\t\tif(award == 'Best Performance by an Actor in a Leading Role'):\n",
+      "\t\t\t\tdictionary[year]['Best Actor in a Leading Role'] = dictionary[year]['Best Performance by an Actor in a Leading Role']\n",
+      "\t\t\t\tdel dictionary[year]['Best Performance by an Actor in a Leading Role']\n",
+      "\n",
+      "\t\t\tif(award == 'Best Performance by an Actress in a Leading Role'):\n",
+      "\t\t\t\tdictionary[year]['Best Actress in a Leading Role'] = dictionary[year]['Best Performance by an Actress in a Leading Role']\n",
+      "\t\t\t\tdel dictionary[year]['Best Performance by an Actress in a Leading Role']\n",
+      "\n",
+      "\t\t\tif(award == 'Best Performance by an Actress in a Supporting Role'):\n",
+      "\t\t\t\tdictionary[year]['Best Actress in a Supporting Role'] = dictionary[year]['Best Performance by an Actress in a Supporting Role']\n",
+      "\t\t\t\tdel dictionary[year]['Best Performance by an Actress in a Supporting Role']\n",
+      "\n",
+      "\t\t\tif(award == 'Best Performance by an Actor in a Supporting Role'):\n",
+      "\t\t\t\tdictionary[year]['Best Actor in a Supporting Role'] = dictionary[year]['Best Performance by an Actor in a Supporting Role']\n",
+      "\t\t\t\tdel dictionary[year]['Best Performance by an Actor in a Supporting Role']\n",
+      "\n",
+      "\t\t\tif(award == 'Best Writing, Original Screenplay'):\n",
+      "\t\t\t\tdictionary[year]['Best Writing, Screenplay Written Directly for the Screen'] = dictionary[year]['Best Writing, Original Screenplay']\n",
+      "\t\t\t\tdel dictionary[year]['Best Writing, Original Screenplay']\n",
+      "\n",
+      "\t\t\tif(award == 'Best Writing, Adapted Screenplay'):\n",
+      "\t\t\t\tdictionary[year]['Best Writing, Screenplay Based on Material from Another Medium'] = dictionary[year]['Best Writing, Adapted Screenplay']\n",
+      "\t\t\t\tdel dictionary[year]['Best Writing, Adapted Screenplay']\n",
+      "\n",
+      "\t\t\tif(award == 'Best Foreign Language Film of the Year'):\n",
+      "\t\t\t\tnewAwardName = award\n",
+      "\t\t\t\tnewAwardName = re.sub(' of the Year', '', newAwardName)\n",
+      "\t\t\t\tdictionary[year][newAwardName] = dictionary[year][award]\n",
+      "\t\t\t\tdel dictionary[year][award]\n",
+      "\n",
+      "\t\t\t#check to see if it includes best achievement\n",
+      "\t\t\tif('Best Achievement' in award):\n",
+      "\t\t\t\tif(award == 'Best Achievement in Directing'):\n",
+      "\t\t\t\t\tdictionary[year]['Best Director'] = dictionary[year]['Best Achievement in Directing']\n",
+      "\t\t\t\t\tdel dictionary[year]['Best Achievement in Directing']\n",
+      "\t\t\t\telse:\n",
+      "\t\t\t\t\tnewAwardName = award\n",
+      "\t\t\t\t\tif('Mixing' in award):\n",
+      "\t\t\t\t\t\tnewAwardName = re.sub(' Mixing', '', newAwardName)\n",
+      "\n",
+      "\t\t\t\t\tif(' and Hairstyling' in award):\n",
+      "\t\t\t\t\t\tnewAwardName = re.sub(' and Hairstyling', '', newAwardName)\n",
+      "\n",
+      "\t\t\t\t\tif('Music Written for Motion Pictures, Original Song' or 'Music Written for Motion Pictures, Original Score' in award):\n",
+      "\t\t\t\t\t\tnewAwardName = re.sub(' Written for Motion Pictures', '', newAwardName)\n",
+      "\n",
+      "\n",
+      "\t\t\t\t\tnewAwardName = re.sub(' Achievement in', '', newAwardName)\n",
+      "\n",
+      "\t\t\t\t\tif 'Visual Effects' in newAwardName:\n",
+      "\t\t\t\t\t\t#add comma\n",
+      "\t\t\t\t\t\tnewAwardName = 'Best Effects, Visual Effects' \n",
+      "\n",
+      "\t\t\t\t\tdictionary[year][newAwardName] = dictionary[year][award]\n",
+      "\t\t\t\t\tdel dictionary[year][award]\n",
+      "\t\t\t\t\t\n",
+      "\treturn dictionary\n",
+      "\n",
+      "\n",
+      "\n",
+      "'''\n",
+      "END OF HELPER FUNCTIONS\n",
+      "'''\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "'''\n",
+      "Gets the movie titles for all Oscars for a given year. i.e. get_by_year(2012)\n",
       "Function\n",
       "--------\n",
-      "get_oscars\n",
+      "get_by_year\n",
       "\n",
-      "Returns\n",
-      "-------\n",
-      "Constructs and returns a dictionary of oscars with the structure above\n",
-      "\"\"\"\n",
+      "Input int year\n",
       "\n",
-      "def get_oscars():\n"
+      "Outputs a dict of the format:\n",
+      "'Award':\n",
+      "\t'nominees': ['a', 'b', 'c', 'd'] \n",
+      "\t'winner': 'f'\n",
+      "\n",
+      "'''\n",
+      "def get_by_year(year):\n",
+      "\n",
+      "\turl = URL(\"http://www.imdb.com/event/ev0000003/\" + str(year))\n",
+      "\tdom = DOM(url.download(cached=True))\n",
+      "\t\n",
+      "\tdictAll = {}\n",
+      "\t\n",
+      "\tawards = dom.by_class('award')\n",
+      "\tawardTitles = awards[0].by_tag('h2')\n",
+      "\tawardList = []\n",
+      "\tfor award in awardTitles:\n",
+      "\t\tawardList.append(award.content)\n",
+      "\n",
+      "\tprize = awards[0].by_tag('blockquote')\n",
+      "\tfor index, title in enumerate(prize[1:25]):\n",
+      "\t\twinner = title.by_tag('strong')[0].by_tag('a')[0].content\n",
+      "\t\t#print winner\n",
+      "\t\tnomineeList = []\n",
+      "\t \tfor each in title.by_tag('strong')[1::]:\n",
+      "\t \t\tnomineeList.append(clean_unicode(each.by_tag('a')[0].content))\n",
+      "\t \t\t\n",
+      "\t \twinnersAndNominees = {}\n",
+      "\t  \twinnersAndNominees['winner'] = clean_unicode(winner)\n",
+      "\t  \twinnersAndNominees['nominees'] = nomineeList\n",
+      "\t \tdictAll[awardList[index]] =  winnersAndNominees\n",
+      "\t#print dictAll['Best Performance by an Actor in a Leading Role']\t\n",
+      "\treturn dictAll\n",
+      "\n",
+      "\n",
+      "\n",
+      "'''\n",
+      "Gets the movie titles for all Oscars for all years between 1935 and 2013.\n",
+      "Function\n",
+      "--------\n",
+      "get_all_years()\n",
+      "\n",
+      "\n",
+      "Outputs a dict of dicts the format:\n",
+      "'Year':\n",
+      "\t'Award':\n",
+      "\t\t'nominees': ['a', 'b', 'c', 'd'] \n",
+      "\t\t'winner': 'f'\n",
+      "\n",
+      "'''\n",
+      "\n",
+      "def get_all_years():\n",
+      "\thugeDict = {}  #lol\n",
+      "\tfor year in range(1935, 2014):\n",
+      "\t\thugeDict[year] = get_by_year(str(year))\n",
+      "\treturn hugeDict\n",
+      "\n",
+      "\n",
+      "\n",
+      "'''\n",
+      "Gets all data for every year for a specific oscar\n",
+      "Function\n",
+      "------\n",
+      "get_by_award_all_years(oscar, dictionary)\n",
+      "\n",
+      "Outputs a dict of the format\n",
+      "'Year':\n",
+      "\t'nominees': ['a', 'b', 'c', 'd'] \n",
+      "\t'winner': 'f'\n",
+      "        \n",
+      "'''\n",
+      "def get_by_award_all_years(oscar, dictionary):\n",
+      "\tyearDict = {}\n",
+      "\tfor year in dictionary:\n",
+      "\t\tif oscar in dictionary[year].keys():\n",
+      "\t\t\tyearDict[year] = dictionary[year][oscar]\n",
+      "\treturn yearDict\n",
+      "\n",
+      "\n",
+      "'''\n",
+      "EXAMPLE OF USAGE:\n",
+      "allDataEver = get_all_years()\n",
+      "allDataEver = repair_dict(oscarArray, allDataEver)\n",
+      "print allDataEver[2013]['Best Cinematography']\n",
+      "print get_by_award_all_years('Best Picture', allDataEver) \n",
+      "print get_by_year(1952)\n",
+      "\n",
+      "#official oscar titles\n",
+      "#note Best Picture instead of Best Achievement in Picture etc. \n",
+      "#note that not all oscars exist for every year, i.e. best black and white \n",
+      "\n",
+      "oscarArray = ['Best Picture', 'Best Actor in a Leading Role', \n",
+      "'Best Actress in a Leading Role', 'Best Actor in a Supporting Role', \n",
+      "'Best Actress in a Supporting Role', 'Best Actor in a Supporting Role', \n",
+      "'Best Director', 'Best Assistant Director', 'Best Writing, Screenplay Written Directly for the Screen', \n",
+      "'Best Writing, Screenplay Based on Material from Another Medium', 'Best Cinematography', \n",
+      "'Best Art Direction-Set Decoration', 'Best Costume Design', 'Best Sound', 'Best Film Editing', \n",
+      "'Best Sound Editing','Best Effects, Visual Effects', 'Best Makeup', 'Best Music, Original Song', \n",
+      "'Best Music, Original Score', 'Best Short Film, Animated', 'Best Short Film, Live Action', 'Best Documentary, Short Subjects', \n",
+      "'Best Documentary, Features', 'Best Foreign Language Film']\n",
+      "\n",
+      "'''\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "IndentationError",
-       "evalue": "expected an indented block (<ipython-input-2-2d369065740e>, line 12)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-2d369065740e>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    def get_oscars():\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "\"\\nEXAMPLE OF USAGE:\\nallDataEver = get_all_years()\\nallDataEver = repair_dict(oscarArray, allDataEver)\\nprint allDataEver[2013]['Best Cinematography']\\nprint get_by_award_all_years('Best Picture', allDataEver) \\nprint get_by_year(1952)\\n\\n#official oscar titles\\n#note Best Picture instead of Best Achievement in Picture etc. \\n#note that not all oscars exist for every year, i.e. best black and white \\n\\noscarArray = ['Best Picture', 'Best Actor in a Leading Role', \\n'Best Actress in a Leading Role', 'Best Actor in a Supporting Role', \\n'Best Actress in a Supporting Role', 'Best Actor in a Supporting Role', \\n'Best Director', 'Best Assistant Director', 'Best Writing, Screenplay Written Directly for the Screen', \\n'Best Writing, Screenplay Based on Material from Another Medium', 'Best Cinematography', \\n'Best Art Direction-Set Decoration', 'Best Costume Design', 'Best Sound', 'Best Film Editing', \\n'Best Sound Editing','Best Effects, Visual Effects', 'Best Makeup', 'Best Music, Original Song', \\n'Best Music, Original Score', 'Best Short Film, Animated', 'Best Short Film, Live Action', 'Best Documentary, Short Subjects', \\n'Best Documentary, Features', 'Best Foreign Language Film']\\n\\n\""
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "oscar_results = get_oscars();\n",
-      "f = open(\"oscars.json\",\"w+\")\n",
-      "json.dump(oscar_results,f)\n",
-      "f.close()\n",
+      "oscar_results = get_all_years();\n",
+      "oscar_results = repair_dict(oscar_results)\n",
+      "print oscar_results[1940] #example / test\n",
+      "# f = open(\"oscars.json\",\"w+\")\n",
+      "# json.dump(oscar_results,f)\n",
+      "# f.close()\n",
       "\n",
       "# load an existing dictionary\n",
       "#f = open(\"oscars.json\",\"rb\")\n",
@@ -171,17 +389,14 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "NameError",
-       "evalue": "name 'get_oscars' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-3-1214e73593fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moscar_results\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_oscars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"oscars.json\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"w+\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moscar_results\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mNameError\u001b[0m: name 'get_oscars' is not defined"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{u'Best Music, Scoring': {'nominees': ['Babes in Arms', 'First Love', 'The Great Victor Herbert', 'The Hunchback of Notre Dame', 'Intermezzo: A Love Story', 'Mr. Smith Goes to Washington', 'Of Mice and Men', 'The Private Lives of Elizabeth and Essex', 'She Married a Cop', 'Swanee River', 'They Shall Have Music', 'Way Down South'], 'winner': 'Stagecoach'}, u'Best Sound, Recording': {'nominees': ['Balalaika', 'Gone with the Wind', 'Goodbye, Mr. Chips', 'The Great Victor Herbert', 'The Hunchback of Notre Dame', 'Man of Conquest', 'Mr. Smith Goes to Washington', 'Of Mice and Men', 'The Private Lives of Elizabeth and Essex', 'The Rains Came'], 'winner': 'When Tomorrow Comes'}, u'Best Director': {'nominees': ['Mr. Smith Goes to Washington', 'Stagecoach', 'Goodbye, Mr. Chips', 'Wuthering Heights'], 'winner': 'Gone with the Wind'}, u'Best Effects, Special Effects': {'nominees': ['Gone with the Wind', 'Only Angels Have Wings', 'The Private Lives of Elizabeth and Essex', 'Topper Takes a Trip', 'Union Pacific', 'The Wizard of Oz'], 'winner': 'The Rains Came'}, u'Best Art Direction': {'nominees': ['Beau Geste', 'Captain Fury', 'First Love', 'Love Affair', 'Man of Conquest', 'Mr. Smith Goes to Washington', 'The Private Lives of Elizabeth and Essex', 'The Rains Came', 'Stagecoach', 'The Wizard of Oz', 'Wuthering Heights'], 'winner': 'Gone with the Wind'}, u'Best Actor in a Leading Role': {'nominees': ['Gone with the Wind', 'Wuthering Heights', 'Babes in Arms', 'Mr. Smith Goes to Washington'], 'winner': 'Goodbye, Mr. Chips'}, u'Best Writing, Screenplay': {'nominees': ['Goodbye, Mr. Chips', 'Mr. Smith Goes to Washington', 'Ninotchka', 'Wuthering Heights'], 'winner': 'Gone with the Wind'}, u'Best Actor in a Supporting Role': {'nominees': ['Juarez', 'Mr. Smith Goes to Washington', 'Beau Geste', 'Mr. Smith Goes to Washington'], 'winner': 'Stagecoach'}, u'Best Picture': {'nominees': ['Dark Victory', 'Goodbye, Mr. Chips', 'Love Affair', 'Mr. Smith Goes to Washington', 'Ninotchka', 'Of Mice and Men', 'Stagecoach', 'The Wizard of Oz', 'Wuthering Heights'], 'winner': 'Gone with the Wind'}, u'Best Music, Original Score': {'nominees': ['Dark Victory', 'Eternally Yours', 'Golden Boy', 'Gone with the Wind', \"Gulliver's Travels\", 'The Man in the Iron Mask', 'Man of Conquest', 'Nurse Edith Cavell', 'Of Mice and Men', 'The Rains Came', 'Wuthering Heights'], 'winner': 'The Wizard of Oz'}, u'Best Actress in a Leading Role': {'nominees': ['Dark Victory', 'Love Affair', 'Ninotchka', 'Goodbye, Mr. Chips'], 'winner': 'Gone with the Wind'}, u'Best Cinematography, Color': {'nominees': ['Drums Along the Mohawk', 'The Four Feathers', 'The Mikado', 'The Private Lives of Elizabeth and Essex', 'The Wizard of Oz'], 'winner': 'Gone with the Wind'}, u'Best Short Subject, Cartoons': {'nominees': ['Detouring America', 'Peace on Earth', 'The Pointer'], 'winner': 'Ugly Duckling'}, u'Best Music, Original Song': {'nominees': [\"Gulliver's Travels\", 'Second Fiddle', 'Love Affair'], 'winner': 'The Wizard of Oz'}, u'Best Actress in a Supporting Role': {'nominees': ['Gone with the Wind', 'Wuthering Heights', 'Drums Along the Mohawk', 'Love Affair'], 'winner': 'Gone with the Wind'}, u'Best Cinematography, Black-and-White': {'nominees': ['First Love', 'The Great Victor Herbert', 'Gunga Din', 'Intermezzo: A Love Story', 'Juarez', 'Lady of the Tropics', 'Only Angels Have Wings', 'The Rains Came', 'Stagecoach'], 'winner': 'Wuthering Heights'}, u'Best Film Editing': {'nominees': ['Goodbye, Mr. Chips', 'Mr. Smith Goes to Washington', 'The Rains Came', 'Stagecoach'], 'winner': 'Gone with the Wind'}, u'Best Writing, Original Story': {'nominees': ['Bachelor Mother', 'Love Affair', 'Ninotchka', 'Young Mr. Lincoln'], 'winner': 'Mr. Smith Goes to Washington'}, u'Best Short Subject, One-reel': {'nominees': ['Information Please: Series 1, No. 1', 'Prophet Without Honor', 'Sword Fishing'], 'winner': 'Busy Little Bears'}, u'Best Short Subject, Two-reel': {'nominees': ['Drunk Driving', 'Five Times Five'], 'winner': 'Sons of Liberty'}}\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
